kubernetes/esercizio-04/solution/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: demo
spec:
  selector:
    app: web-demo
  ports:
    - port: 80
      targetPort: 80
